--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "my first blog",
   "main": "index.js",
   "scripts": {
-    "test": "node --harmony ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha",
-    "start": "NODE_ENV=production pm2 start index.js --node-args='--harmony' --name 'myblog'"
+    "test":
+      "node --harmony ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha",
+    "start":
+      "cross-env NODE_ENV=production pm2 start index.js --node-args='--harmony' --name 'myblog'",
+    "start-dev":
+      "supervisor index.js"
   },
   "author": "nswbmw",
   "license": "MIT",
@@ -13,6 +17,7 @@
     "config-lite": "2.0.0",
     "connect-flash": "0.1.1",
     "connect-mongo": "1.3.2",
+    "cross-env": "^5.1.1",
     "ejs": "2.5.2",
     "express": "4.14.0",
     "express-formidable": "1.0.0",
